@@ -1,10 +1,13 @@
 
+2007-12-07  Lynn Garren
+
+	* HepMC/IO_GenEvent.h: fix problem with rdstate() and clear()
+
 2007-12-04  Lynn Garren
 
 	* HepMC/IO_Ascii.h, IO_ExtendedAscii.h, IO_GenEvent.h and
 	  src/IO_Ascii.cc, IO_ExtendedAscii.cc, IO_GenEvent.cc:
 	  common input methodologies now handled by CommonIO
-
 
 2007-12-03  Lynn Garren
 
